# Germany-Hamburg

./: .gitignore  CMakeLists.txt  README  README.md
C-Ruft-COBOL/: COBOL und C.pptx
Expression_Templates/: README
Expression_Templates/code/: Makefile
Expression_Templates/code/doc/: expression_templates.txt
Expression_Templates/code/src/: Makefile  runang2q.sh  types.hpp
Expression_Templates/code/test/: earray_mixed_test.cpp  narray_assignment_test.cpp  narray_test.cpp
Expression_Templates/talk/: .gitignore  talk.tex
June-24-2015/code/doc/: .gitignore  old_style_operators.txt
June-24-2015/code/include/: earray.hpp
June-24-2015/code/src/: .gitignore  sinbm.cpp
June-24-2015/code/test/: Makefile  earray_add_test.cpp  narray_access_test.cpp  narray_construction_test.cpp  narray_old_functions_test.cpp
June-24-2015/talk/: talk.tex
Template_Techniques_The_power_of_Enums/: TTThePowerOfEnums.pptx  TemplateTechniquesThePowerOfEnums.cpp
boost-python/include/talk/: device.hpp  motor.hpp  sensor.hpp  step_motor.hpp
boost-python/src/: .gitignore
boost-python/src/embedding/: CMakeLists.txt
boost-python/src/embedding/src/: CMakeLists.txt  main.cpp  pyshell2.cpp
boost-python/src/libmcs/: CMakeLists.txt
boost-python/src/libmcs/test/: CMakeLists.txt  step_motor_test.cpp
boost-python/src/libtalk/: CMakeLists.txt
boost-python/src/libtalk/test/: CMakeLists.txt  device_test.cpp  functions_test.cpp  motor_test.cpp  moveable_test.cpp  named_object_test.cpp  sensor_test.cpp  step_motor_test.cpp
boost-python/src/python-talk/: .gitignore  env.sh  setup.py
boost-python/talk/: .gitignore  latexmkrc  talk.tex
boost-python/talk/pics/: ipython_screenshot.xcf
boost-python/talk/tex/: boost_python.tex  motivation.tex  motivation.tex.aux
boost-python/talk2/: .gitignore  talk.tdo  talk.tex  talk.vrb
boost-python/talk2/pics/: python_objects.dia  python_objects.tex
boost-python/talk2/tex/: api.tex  (+7 more)
c-python/: python-c-api.odp
c-python/custom-type/: README  cust-ctor.cpp  cust-empty.cpp  cust-members.cpp  setup.py
c-python/embed/: Makefile  doit.py  embed.cpp  oneclass.cpp  oneclass.h  setup.py
c-python/exceptions/: sample.py  sampleexc.cpp  setup.py
c-python/simple-extend/: README  cppsample.cpp  setup.py
c-python/unpack-params/: sample.py  setup.py  unpackparams.cpp
code/: Makefile
code/doc/: Doxyfile  expression_templates.txt
code/include/: earray.hpp  narray.hpp  scalar.hpp
code/src/: .gitignore  Makefile  ang2q.cpp  ang2q_classic.cpp  ang2q_cstyle.cpp  ang2q_et.cpp  bm_classic.cpp  bm_cstyle.cpp  bm_et.cpp  check_types  check_types.cpp  fortran_test.f90
code/test/: .gitignore  Makefile  earray_add_test.cpp  earray_cos_test.cpp  earray_div_test.cpp  earray_mult_test.cpp  earray_sin_test.cpp  earray_sub_test.cpp  narray_access_test.cpp  narray_construction_test.cpp  narray_old_functions_test.cpp  narray_old_operators_test.cpp  narray_test_common.hpp
constexpr/: Makefile  arr.cpp  betrug.cpp  control-flow.cpp  fac.cpp  fib.cpp  literal.cpp  no_compile_try.cpp  object.cpp  sqrt.cpp
constexpr/doc/: constexpr.odp
infer/: README.md
parallelism/: styles.css
parallelism/ts1/: algorithms.html  context.html  dynamic_policies.html  exceptions.html  implementation.html  index.html  intro.html  opinion.html  policies.html  static_policies.html
parallelism/ts2/: index.html  task_block.html
pybind11/talk/: advanced.html  basic.html  building.html  exceptions.html  index.html  intro.html  policies.html  styles.css  types.html
ranges/: Makefile  adaptor.cpp  c++-ranges.odp  func.cpp  intersect-range.cpp  intersect.cpp  prim.cpp
slides/: codechecker.odp
talk/: .~lock.talk.odp#  classes.dia  talk.odp
unicode/: CMakeLists.txt  example2.txt  example3.txt  example4.txt  example5.txt  reader2.cpp  reader3.cpp  slides.odp
unicode/src/: example1.txt  reader1.cpp  reader2.cpp
(+65 files in other folders)
